--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node game-server/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "nodejs-websocket": "^1.7.0"
+    "express": "^4.14.0",
+    "nodejs-websocket": "^1.7.0",
+    "ws": "^1.1.1"
   }
 }
