--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.14.0",
     "nodejs-websocket": "^1.7.0",
+    "pinio": "0.0.3",
     "ws": "^1.1.1"
   }
 }
